[build-system]
    requires = ["setuptools"]
    build-backend = "setuptools.build_meta"

[project]
    name = "dvault"
    version = "1.0"
    description = "To keep your data safe from others' eyes"
    authors = [
        { name = "Gokul Raj", email = "gokulraj059@gmail.com" },
    ]
    readme = "README.md"
    license = { file = "LICENSE" }

    requires-python = ">= 3.12"
    dependencies = [
        "cryptography",
    ]

[project.urls]
    Homepage = "https://github.com/GokulRajV8/dvault"
